Fix bugs, adjust styling and icons

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,8 +9,8 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor-1d49a875992c168c6f22ecd18130f5fb.css" />
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend-a7b374eef49ff53c9416430b7a777852.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend.css" />
 
     {{content-for "head-footer"}}
   </head>
@@ -18,8 +18,8 @@
     {{content-for "body"}}
     <div id="ember"></div>
 
-    <script src="{{rootURL}}assets/vendor-b1cc89ee649b58ea54a368fd2d2b5520.js"></script>
-    <script src="{{rootURL}}assets/frontend-89664c9b78c6d519c71fdb0157d93c70.js"></script>
+    <script src="{{rootURL}}assets/vendor.js"></script>
+    <script src="{{rootURL}}assets/frontend.js"></script>
 
     {{content-for "body-footer"}}
   </body>
