Fix frontend tests

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,8 +9,8 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor-1d49a875992c168c6f22ecd18130f5fb.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend-ee4b8a66d50366057e7f4a5a3bf9661a.css" />
 
     {{content-for "head-footer"}}
   </head>
@@ -18,8 +18,8 @@
     {{content-for "body"}}
     <div id="ember"></div>
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/frontend.js"></script>
+    <script src="{{rootURL}}assets/vendor-66c10af2f17f028ccbfee3855ec07472.js"></script>
+    <script src="{{rootURL}}assets/frontend-227ee5f71069df7e74e31706e8e30932.js"></script>
 
     {{content-for "body-footer"}}
   </body>
