--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,8 +9,8 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor-1d49a875992c168c6f22ecd18130f5fb.css" />
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend-f1ad3ce2648d0a9ce394fbe0888c0b38.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend.css" />
 
     {{content-for "head-footer"}}
   </head>
@@ -18,8 +18,8 @@
     {{content-for "body"}}
     <div id="ember"></div>
 
-    <script src="{{rootURL}}assets/vendor-66c10af2f17f028ccbfee3855ec07472.js"></script>
-    <script src="{{rootURL}}assets/frontend-6993b8b294b2e894d561b12146052c32.js"></script>
+    <script src="{{rootURL}}assets/vendor.js"></script>
+    <script src="{{rootURL}}assets/frontend.js"></script>
 
     {{content-for "body-footer"}}
   </body>
