--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,8 +9,8 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor-1d49a875992c168c6f22ecd18130f5fb.css" />
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend-13cd9babd32a6a7e3ff3277d7ac1dd82.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend.css" />
 
     {{content-for "head-footer"}}
   </head>
@@ -18,8 +18,8 @@
     {{content-for "body"}}
     <div id="ember"></div>
 
-    <script src="{{rootURL}}assets/vendor-7d0a15cb296c83a36cd4bcfe83327412.js"></script>
-    <script src="{{rootURL}}assets/frontend-414cd7b340078a2384fe99320f2be411.js"></script>
+    <script src="{{rootURL}}assets/vendor.js"></script>
+    <script src="{{rootURL}}assets/frontend.js"></script>
 
     {{content-for "body-footer"}}
   </body>
