Implement puzzle shell header and footer, refs: #404

--- a/config/docker/development/frontend-index.html
+++ b/config/docker/development/frontend-index.html
@@ -21,6 +21,7 @@
 
     <script src="http://localhost:4200/assets/vendor.js"></script>
     <script src="http://localhost:4200/assets/frontend.js"></script>
+    <script src="http://localhost:4200/assets/pzsh-bundle.js"></script>
 
     <div id="ember-bootstrap-wormhole"></div>
 <div id="ember-basic-dropdown-wormhole"></div>
