--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -20,6 +20,7 @@
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/frontend.js"></script>
+    <script src="{{rootURL}}assets/pzsh-bundle.js"></script>
 
     {{content-for "body-footer"}}
   </body>
