tried to bring admin/settings link to work

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,8 +9,8 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend.css" />
+    <link integrity="" rel="stylesheet" href="http://localhost:4200/{{rootURL}}assets/vendor.css" />
+    <link integrity="" rel="stylesheet" href="http://localhost:4200/{{rootURL}}assets/frontend.css" />
 
     {{content-for "head-footer"}}
   </head>
@@ -18,8 +18,8 @@
     {{content-for "body"}}
     <div id="ember"></div>
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/frontend.js"></script>
+    <script src="http://localhost:4200/{{rootURL}}assets/vendor.js"></script>
+    <script src="http://localhost:4200/{{rootURL}}assets/frontend.js"></script>
 
     {{content-for "body-footer"}}
   </body>
